--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,8 +6,8 @@
 	h1 {
 		font-variant: small-caps;
 	}
-	button {
-		@apply bg-slate-300 px-2 py-1 rounded hover:bg-slate-200;
+	button.symbols {
+		@apply bg-slate-300 px-2 pt-0 pb-1 rounded hover:bg-slate-200;
 	}
 }
 
